--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "author": "",
   "license": "ISC",
-
   "dependencies": {
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "lodash": "^4.17.11",
     "mongoose": "^5.3.4"
+  },
+  "scripts": {
+    "start": "node app.js"
   }
 }
